Update Home, Detail, WishList, Room Database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="wishList_title">Your Favorite Place</string>
     <string name="choose_pref">What Kind of Place Do You Want To Visit?</string>
     <string name="choose_pref_dietary">Select any of the following dietary restrictions that apply to you</string>
+    <string name="review">seru ada live musik dan dj nyacocok buat party dan banyak spot yg instagramable lokasinya jga strategis di tengah pusat kota</string>
 </resources>
